<LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            tools:context="com.imoandroid.imoandroidapp.FoundationActivity$PlaceholderFragment"
            xmlns:tools="http://schemas.android.com/tools"
            android:background="@drawable/background"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"

    android:orientation="vertical"
        >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            >

            <TextView
                android:id="@+id/fragment_patientName"
                android:text="@string/strFullName"
                style="@style/PatientName"/>

            <TextView
                android:id="@+id/fragment_patientID"
                android:text="@string/strPatientID"
                style="@style/PatientDetails"/>

            <TextView
                android:id="@+id/fragment_patientAge"
                android:text="@string/strAge"
                style="@style/PatientDetails"/>

            <TextView
                android:id="@+id/fragment_patientLocation"
                android:text="@string/strPrimaryAddress"
                style="@style/PatientDetails"/>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_marginTop="27dp">

            <TextView
                android:id="@+id/fragment_type"
                android:text="Problems"
                android:textSize="40dp"
                android:textStyle="bold"
                style="@style/PatientDetails"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>
    </LinearLayout>





        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRow"
            android:layout_marginRight="25dp"
            >

            <Button
                android:id="@+id/btnRemove"
                android:text="Remove"
                android:layout_toLeftOf="@+id/btnEdit"
                style="@style/TabButton"
                />

            <Button
                android:id="@+id/btnAdd"
                android:text="Add"
                android:layout_toLeftOf="@id/btnRemove"
                style="@style/TabButton"
                />

            <Button
                android:id="@+id/btnSort"
                android:text="Sort"
                style="@style/TabButton"
                android:layout_toLeftOf="@id/btnAdd"
               />

            <Button
                android:id="@+id/btnSave"
                android:text="Save"
                android:layout_toLeftOf="@+id/btnBilling"
                style="@style/TabButton"
                />

            <Button
                android:id="@+id/btnEdit"
                android:text="Edit"
                android:layout_toLeftOf="@id/btnSave"
                style="@style/TabButton"
                />

            <Button
                android:id="@+id/btnBilling"
                android:text="Send to Billing"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                style="@style/TabButton"
                />
        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/listBorder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        >
        <ListView
            android:id="@+id/lvTerm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"

            ></ListView>
    </RelativeLayout>

</LinearLayout>